[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/sprites/bubble.png" type="Texture" id=1]
[ext_resource path="res://assets/scenes/level1/BubbleProjectile.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 4.12311

[node name="BubbleProjectile" type="Area2D"]
z_index = 500
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( 2.38419e-07, -2.38419e-07 )
scale = Vector2( 0.4, 0.4 )

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true
autostart = true

[connection signal="body_entered" from="." to="." method="_on_BubbleProjectile_body_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
